[gd_scene load_steps=3 format=3 uid="uid://m8i881u5shwe"]

[ext_resource type="Script" uid="uid://csejui8fya7gc" path="res://characters/weapons/weapon.gd" id="1_oc8kj"]
[ext_resource type="Texture2D" uid="uid://bxhabqnrirdu1" path="res://assets/Dungeon Gathering Full/New Items [Update]/16x16 Items Pack.png" id="1_tpbx6"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_oc8kj")

[node name="Delay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="WeaponSprite" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("1_tpbx6")
hframes = 10
vframes = 23
frame = 33

[node name="WeaponSound" type="AudioStreamPlayer2D" parent="."]

[node name="WeaponSwitchSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
